Bug 691336: Resolve some confusion between the original global variable removal changes, and subsequent changes, that could result in warning emprintf calls using a memory pointer that could not exist at that stage.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11319 a1074d23-0009-0410-80fe-cf8c14f379e6